added background and better colours on the homepage

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Old English Five';
+  src: url('/fonts/OldEnglishFive.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
